feat: change some funtions
